# llm-policy-analyzer

./: .gitignore  README.md  app.py  build_embeddings.py  config.py  llm_client.py  main.py  pipeline.py  pyproject.toml  retrieval.py
knowledge_base/: gdpr_checklist.json  gdpr_checklist_embedding.json  gdpr_paragraphs.jsonl  gdpr_rules_embedding.json  notion_privacy.jsonl  notion_privacy_policy.txt
src/: llm_client.py  pipeline.py
src/retrieval/: policy_retriever.py  retrieval_utils.py  rule_matcher.py
src/utils/: config.py  helpers.py
