[project]
name = "llm-policy-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.8.0",
    "jsonlines>=4.0.0",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
]
